Refactor pom and groovy build to be compile-able on Java 26