@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
@@ -11,15 +12,16 @@
     <description>Sequential Edit DistANce Core Module</description>
 
     <properties>
-
         <!-- Maven Build Properties -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
 
         <git.properties>git.properties</git.properties>
 
-        <git-commit-id-plugin.version>2.2.5</git-commit-id-plugin.version>
+        <git-commit-id-plugin.version>4.9.10</git-commit-id-plugin.version>
         <git-commit-id-plugin.dateFormat>yyyyMMdd-HHmmss</git-commit-id-plugin.dateFormat>
 
         <!-- Below Properties are loaded in by the Git-Maven-Plugin at Build Time -->
@@ -27,16 +29,18 @@
         <version.number>${git.commit.time}.${git.commit.id.abbrev}</version.number>
 
         <!-- Dependency Versions -->
-        <groovy.version>2.5.4</groovy.version>
-        <gmavenplus.version>1.6.2</gmavenplus.version>
-        <maven-surefire.version>2.18.1</maven-surefire.version>
-        <maven-compiler.version>3.3</maven-compiler.version>
-        <maven-compiler.config.version>1.8</maven-compiler.config.version>
-        <junit.version>4.12</junit.version>
-        <spockframework.version>1.2-groovy-2.5</spockframework.version>
-        <commons-lang3.version>3.8</commons-lang3.version>
-        <cglib.version>3.2.5</cglib.version>
-        <objenesis.version>1.2</objenesis.version>
+        <groovy.version>5.0.3</groovy.version>
+        <gmavenplus.version>4.3.1</gmavenplus.version>
+        <maven-surefire.version>3.2.5</maven-surefire.version>
+        <maven-compiler.version>3.11.0</maven-compiler.version>
+        <junit.version>4.13.2</junit.version>
+        <spockframework.version>2.4-groovy-5.0</spockframework.version>
+        <commons-lang3.version>3.14.0</commons-lang3.version>
+        <commons-collections4.version>4.5.0</commons-collections4.version>
+        <google-guava.version>33.5.0-jre</google-guava.version>
+        <bytebuddy.version>1.14.11</bytebuddy.version>
+        <mockito.version>5.11.0</mockito.version>
+        <objenesis.version>3.3</objenesis.version>
     </properties>
 
     <scm>
@@ -48,18 +52,19 @@
 
     <build>
         <plugins>
-
+            <!-- Maven compiler plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler.version}</version>
                 <configuration>
-                    <source>${maven-compiler.config.version}</source>
-                    <target>${maven-compiler.config.version}</target>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
                     <encoding>utf-8</encoding>
                 </configuration>
             </plugin>
 
+            <!-- GMavenPlus plugin for Groovy compilation -->
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
@@ -74,8 +79,28 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <sources>
+                        <source>
+                            <directory>${project.basedir}/src/main/groovy</directory>
+                        </source>
+                    </sources>
+                    <testSources>
+                        <source>
+                            <directory>${project.basedir}/src/test/groovy</directory>
+                        </source>
+                    </testSources>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.groovy</groupId>
+                        <artifactId>groovy-ant</artifactId>
+                        <version>${groovy.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
+            <!-- Maven surefire plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -85,77 +110,71 @@
                         <include>**/*Test.java</include>
                         <include>**/*Spec.java</include>
                     </includes>
+                    <systemPropertyVariables>
+                        <groovy.grape.enable>false</groovy.grape.enable>
+                    </systemPropertyVariables>
+                    <argLine>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util=ALL-UNNAMED
+                        --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                    </argLine>
+                </configuration>
+            </plugin>
+
+            <!-- Git commit ID plugin -->
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>${git-commit-id-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>revision</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
+                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
+                    <generateGitPropertiesFilename>${git.properties}</generateGitPropertiesFilename>
+                    <verbose>true</verbose>
+                    <dateFormat>${git-commit-id-plugin.dateFormat}</dateFormat>
+                    <injectAllReactorProjects>true</injectAllReactorProjects>
+                    <skipPoms>false</skipPoms>
+                    <runOnlyOnce>false</runOnlyOnce>
+                    <failOnNoGitDirectory>false</failOnNoGitDirectory>
+                    <failOnUnableToExtractRepoInfo>false</failOnUnableToExtractRepoInfo>
                 </configuration>
             </plugin>
         </plugins>
-
-        <pluginManagement>
-            <plugins>
-
-                <!-- Provides Git Information to Maven -->
-                <plugin>
-                    <groupId>pl.project13.maven</groupId>
-                    <artifactId>git-commit-id-plugin</artifactId>
-                    <version>${git-commit-id-plugin.version}</version>
-                    <executions>
-                        <execution>
-                            <phase>validate</phase>
-                            <goals>
-                                <goal>revision</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
-                        <generateGitPropertiesFile>true</generateGitPropertiesFile>
-                        <generateGitPropertiesFilename>${git.properties}</generateGitPropertiesFilename>
-                        <verbose>true</verbose>
-                        <dateFormat>${git-commit-id-plugin.dateFormat}</dateFormat>
-                        <injectAllReactorProjects>true</injectAllReactorProjects>
-                        <skipPoms>false</skipPoms>
-                        <runOnlyOnce>false</runOnlyOnce>
-                    </configuration>
-                </plugin>
-
-                <plugin>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.8</version>
-                    <executions>
-                        <execution>
-                            <phase>package</phase>
-                            <configuration>
-                                <target>
-                                    <!-- Below Properties are loaded in by the Git-Maven-Plugin at Build Time -->
-                                    <!--suppress UnresolvedMavenProperty -->
-                                    <echo>Git Commit Id: ${git.commit.id}</echo>
-                                    <!--suppress UnresolvedMavenProperty -->
-                                    <echo>Git Branch: ${git.branch}</echo>
-                                </target>
-                            </configuration>
-                            <goals>
-                                <goal>run</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
-            </plugins>
-        </pluginManagement>
     </build>
 
     <dependencies>
+        <!-- Groovy dependency -->
         <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-            <!-- any version of Groovy \>= 1.5.0 should work here -->
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy</artifactId>
             <version>${groovy.version}</version>
-            <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google-guava.version}</version>
         </dependency>
 
         <dependency>
@@ -172,10 +191,26 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- ByteBuddy for mocking with Spock -->
         <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib-nodep</artifactId>
-            <version>${cglib.version}</version>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${bytebuddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy-agent</artifactId>
+            <version>${bytebuddy.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito for mocking with Spock -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -185,7 +220,5 @@
             <version>${objenesis.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
-
 </project>
